--- a/INFO5731_Assignment_1_(1).ipynb
+++ b/INFO5731_Assignment_1_(1).ipynb
@@ -3582,7 +3582,19 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "Overall, this assignment was both educational and practical. It helped me understand how real-world data is collected using APIs and how important data cleaning is before performing any analysis. Working with the Twitter (X) API gave me insight into how social media data can be extracted for machine learning or artificial intelligence research.\n",
+        "\n",
+        "One of the most challenging parts of the assignment was setting up API authentication. Managing developer credentials, handling authentication errors (such as 401 Unauthorized), and understanding access limitations required patience and troubleshooting. It highlighted how external system permissions can affect technical implementation, even when the code is correct.\n",
+        "\n",
+        "Another challenge was ensuring proper data cleaning. Removing duplicates, URLs, special characters, and handling missing values required careful attention to maintain data quality without losing meaningful information.\n",
+        "\n",
+        "What I enjoyed most was seeing the full workflow—from data collection to cleaning and exporting the final dataset. It made the process feel complete and practical rather than purely theoretical. I also appreciated learning how to structure code clearly and perform a final data quality check before saving the dataset.\n",
+        "\n",
+        "Regarding the time provided, it was generally reasonable. However, additional time can be helpful due to potential API access issues and debugging authentication errors, which are sometimes outside the student’s control.\n",
+        "\n",
+        "Overall, this assignment strengthened my understanding of data acquisition, preprocessing, and the importance of clean datasets in machine learning projects."
+      ],
       "metadata": {
         "id": "JbTa-jDS-KFI"
       }
