--- a/INFO5731_Assignment_1_(1).ipynb
+++ b/INFO5731_Assignment_1_(1).ipynb
@@ -59,6 +59,230 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import time\n",
+        "import requests\n",
+        "import pandas as pd\n",
+        "\n",
+        "# -----------------------------\n",
+        "# USER SETTINGS\n",
+        "# -----------------------------\n",
+        "QUERY = \"machine learning\"  # allowed: \"machine learning\", \"data science\", \"artificial intelligence\", \"information extraction\"\n",
+        "TARGET_N = 10_000\n",
+        "OUT_CSV = \"semantic_scholar_10000_abstracts_clean.csv\"\n",
+        "\n",
+        "# Optional: add your key for better rate limits (leave \"\" if you don't have one)\n",
+        "API_KEY = \"\"\n",
+        "\n",
+        "FIELDS = [\n",
+        "    \"paperId\",\n",
+        "    \"title\",\n",
+        "    \"abstract\",\n",
+        "    \"year\",\n",
+        "    \"url\",\n",
+        "    \"citationCount\",\n",
+        "    \"publicationDate\",\n",
+        "    \"authors\"\n",
+        "]\n",
+        "\n",
+        "BASE_URL = \"https://api.semanticscholar.org/graph/v1/paper/search/bulk\"\n",
+        "\n",
+        "\n",
+        "def make_headers(api_key: str) -> dict:\n",
+        "    headers = {\"User-Agent\": \"INFO5731_Assignment1/1.0\"}\n",
+        "    if api_key.strip():\n",
+        "        headers[\"x-api-key\"] = api_key.strip()\n",
+        "    return headers\n",
+        "\n",
+        "\n",
+        "def authors_to_str(authors) -> str:\n",
+        "    if not isinstance(authors, list):\n",
+        "        return \"\"\n",
+        "    names = []\n",
+        "    for a in authors:\n",
+        "        if isinstance(a, dict) and a.get(\"name\"):\n",
+        "            names.append(a[\"name\"].strip())\n",
+        "    return \"; \".join(names)\n",
+        "\n",
+        "\n",
+        "def fetch_bulk_page(query: str, fields: list, token: str | None, api_key: str, retries: int = 6) -> dict:\n",
+        "    \"\"\"\n",
+        "    Bulk search endpoint paginates using a continuation `token`. :contentReference[oaicite:1]{index=1}\n",
+        "    \"\"\"\n",
+        "    params = {\n",
+        "        \"query\": query,\n",
+        "        \"fields\": \",\".join(fields),\n",
+        "        \"sort\": \"citationCount\"\n",
+        "    }\n",
+        "    if token:\n",
+        "        params[\"token\"] = token\n",
+        "\n",
+        "    headers = make_headers(api_key)\n",
+        "\n",
+        "    for attempt in range(1, retries + 1):\n",
+        "        r = requests.get(BASE_URL, params=params, headers=headers, timeout=60)\n",
+        "\n",
+        "        # Handle rate limiting gracefully\n",
+        "        if r.status_code == 429:\n",
+        "            sleep_s = min(60, 2 ** attempt)\n",
+        "            print(f\"[429] Rate limited. Sleeping {sleep_s}s (attempt {attempt}/{retries})...\")\n",
+        "            time.sleep(sleep_s)\n",
+        "            continue\n",
+        "\n",
+        "        # Handle transient server issues\n",
+        "        if 500 <= r.status_code < 600:\n",
+        "            sleep_s = min(60, 2 ** attempt)\n",
+        "            print(f\"[{r.status_code}] Server error. Sleeping {sleep_s}s (attempt {attempt}/{retries})...\")\n",
+        "            time.sleep(sleep_s)\n",
+        "            continue\n",
+        "\n",
+        "        r.raise_for_status()\n",
+        "        return r.json()\n",
+        "\n",
+        "    raise RuntimeError(\"Failed to fetch after multiple retries (rate limits / server errors).\")\n",
+        "\n",
+        "\n",
+        "def clean_text(s: str) -> str:\n",
+        "    if s is None:\n",
+        "        return \"\"\n",
+        "    return \" \".join(str(s).split()).strip()\n",
+        "\n",
+        "\n",
+        "def main():\n",
+        "    rows = []\n",
+        "    token = None\n",
+        "\n",
+        "    # Slow down if no key (shared/stricter limits are more likely without a key)\n",
+        "    sleep_between = 1.2 if API_KEY.strip() else 3.5\n",
+        "\n",
+        "    while len(rows) < TARGET_N:\n",
+        "        data = fetch_bulk_page(QUERY, FIELDS, token, API_KEY)\n",
+        "\n",
+        "        batch = data.get(\"data\", [])\n",
+        "        token = data.get(\"token\")  # next-page token returned by bulk search :contentReference[oaicite:2]{index=2}\n",
+        "\n",
+        "        if not batch:\n",
+        "            print(\"No more results returned by API. Stopping.\")\n",
+        "            break\n",
+        "\n",
+        "        for p in batch:\n",
+        "            rows.append({\n",
+        "                \"paperId\": p.get(\"paperId\", \"\"),\n",
+        "                \"title\": clean_text(p.get(\"title\", \"\")),\n",
+        "                \"abstract\": clean_text(p.get(\"abstract\", \"\")),\n",
+        "                \"year\": p.get(\"year\"),\n",
+        "                \"publicationDate\": p.get(\"publicationDate\", \"\"),\n",
+        "                \"url\": p.get(\"url\", \"\"),\n",
+        "                \"citationCount\": p.get(\"citationCount\"),\n",
+        "                \"authors\": authors_to_str(p.get(\"authors\", [])),\n",
+        "                \"query_used\": QUERY\n",
+        "            })\n",
+        "\n",
+        "            if len(rows) >= TARGET_N:\n",
+        "                break\n",
+        "\n",
+        "        print(f\"Collected {len(rows):,} papers | token={'yes' if token else 'no'}\")\n",
+        "\n",
+        "        if not token:\n",
+        "            print(\"No continuation token returned; cannot paginate further. Stopping.\")\n",
+        "            break\n",
+        "\n",
+        "        time.sleep(sleep_between)\n",
+        "\n",
+        "    df = pd.DataFrame(rows)\n",
+        "\n",
+        "    # Deduplicate by paperId\n",
+        "    if \"paperId\" in df.columns:\n",
+        "        df = df.drop_duplicates(subset=[\"paperId\"]).reset_index(drop=True)\n",
+        "\n",
+        "    # OPTIONAL: keep only rows with a non-empty abstract\n",
+        "    # (uncomment if your instructor expects every row to have text)\n",
+        "    # df = df[df[\"abstract\"].str.len() > 0].reset_index(drop=True)\n",
+        "\n",
+        "    df.to_csv(OUT_CSV, index=False, encoding=\"utf-8\")\n",
+        "    print(f\"\\nSaved cleaned CSV: {OUT_CSV}\")\n",
+        "    print(df.head(5))\n",
+        "\n",
+        "    return df\n",
+        "\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xSVA1r2hDmXl",
+        "outputId": "22760979-fc2e-4c21-b29b-a652e05b7e81"
+      },
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collected 1,000 papers | token=yes\n",
+            "Collected 2,000 papers | token=yes\n",
+            "Collected 3,000 papers | token=yes\n",
+            "Collected 4,000 papers | token=yes\n",
+            "Collected 5,000 papers | token=yes\n",
+            "Collected 6,000 papers | token=yes\n",
+            "Collected 7,000 papers | token=yes\n",
+            "[500] Server error. Sleeping 2s (attempt 1/6)...\n",
+            "Collected 7,671 papers | token=no\n",
+            "No continuation token returned; cannot paginate further. Stopping.\n",
+            "\n",
+            "Saved cleaned CSV: semantic_scholar_10000_abstracts_clean.csv\n",
+            "                                    paperId  \\\n",
+            "0  0000817f14d29ab7febdd976b9a971c81b7de4f6   \n",
+            "1  000099a8f4c7604b553963915427b46ad4b6e491   \n",
+            "2  0000bbee1421f05fd61f172b2788f60106282ca0   \n",
+            "3  00011b6a4ce0a7de7e4cf5b18b1b131ef4a4c103   \n",
+            "4  00011f3b71f704bf34ab3e3d8ea88cf07037f9b5   \n",
+            "\n",
+            "                                               title  \\\n",
+            "0  Transcriptomics-Guided In Silico Drug Repurpos...   \n",
+            "1  AI in Multidisciplinary Engineering: A Holisti...   \n",
+            "2  02011 Development of a machine learning algori...   \n",
+            "3  Why AI Projects in Banks Fail Without the Righ...   \n",
+            "4                                  Consensus hashing   \n",
+            "\n",
+            "                                            abstract    year publicationDate  \\\n",
+            "0  In tropical and subtropical areas, malaria sta...  2023.0      2023-09-05   \n",
+            "1  Artificial Intelligence (AI) has evolved from ...  2025.0      2025-12-26   \n",
+            "2                                                        NaN            None   \n",
+            "3  Everywhere across the globe, banks are increas...  2026.0      2026-01-05   \n",
+            "4                                                     2015.0      2015-05-05   \n",
+            "\n",
+            "                                                 url  citationCount  \\\n",
+            "0  https://www.semanticscholar.org/paper/0000817f...              0   \n",
+            "1  https://www.semanticscholar.org/paper/000099a8...              0   \n",
+            "2  https://www.semanticscholar.org/paper/0000bbee...              0   \n",
+            "3  https://www.semanticscholar.org/paper/00011b6a...              0   \n",
+            "4  https://www.semanticscholar.org/paper/00011f3b...              0   \n",
+            "\n",
+            "                                             authors        query_used  \n",
+            "0  Joyce V. B. Borba; Beatriz Rosa de Azevedo; La...  machine learning  \n",
+            "1               Dr. G. Gayatri Tanuja; Chethana T. V  machine learning  \n",
+            "2  Margarida F. Gralha; J. Magrinho; João M. C. S...  machine learning  \n",
+            "3                                       Swati Kumari  machine learning  \n",
+            "4                          Cong Leng; Jianfeng Cheng  machine learning  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "z4XbpFZTDqBI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "90_NR8c5XGWc"
